--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 </head>
 <body>
-    
+    <iframe id="fullscreen" style="z-index:5000;" height="1920" width="1080" src="./loading.html"></iframe>
     <div id="container">
         <loader :percent="percent"></loader>
             <div>
