--- a/loading.html
+++ b/loading.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>loading...</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=101,height=101, initial-scale=1">
     <style>
         div.box {
             height: 30px;
             min-width: 20px;
             max-width: 100px;
             border-radius: 15px;
+            margin: 1px;
         }
         div.row {
             display: flex;
