--- a/index.html
+++ b/index.html
@@ -18,7 +18,18 @@
     <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 </head>
 <body>
-    <iframe id="fullscreen" style="z-index:5000;" height="1920" width="1080" src="./loading.html"></iframe>
+    <div id="fullscreen" 
+    style="width: 100%;
+    height: 100%;
+    z-index: 5000;
+    position: fixed;
+    background: #292b2c;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    ">
+    <div id="load" style="height:20vw;width:20vw;background: blue;animation: loading 1s ease 0s infinite alternate;"></div>
+    </div>
     <div id="container">
         <loader :percent="percent"></loader>
             <div>
