--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
     ">
-    <div id="load" style="height:20vw;width:20vw;background: blue;animation: loading 1s ease 0s infinite alternate;"></div>
+    <!-- <div id="load" style="height:20vw;width:20vw;background: blue;animation: loading 1s ease 0s infinite alternate;"></div> -->
+    <iframe height='180' width='160' frameborder='0' style="overflow: hidden;" src="loading.html"></iframe>
     </div>
     <div id="container">
         <loader :percent="percent"></loader>
