--- a/loading.html
+++ b/loading.html
@@ -13,30 +13,30 @@
         }
         div.row {
             display: flex;
-            max-width: 150px;
+            max-width: 134px;
             min-height: 50px;
             border-radius: 5px;
             margin-bottom: 5px;
         }
         @keyframes r1c1{
             from {flex:9;}
-            to {flex:3;}
+            to {flex:1;}
         }
         @keyframes r1c2{
             from {flex: 3;}
             to {flex:9;}
         }
         @keyframes r2{
-            from {width:134px;}
-            to {width:1px;}
+            from {transform: rotateY(0deg);}
+            to {transform: rotateY(180deg);}
         }
         @keyframes r3c1{
-            from {flex:8;}
-            to {flex:4;}
+            from {flex:8;margin-right:16px;}
+            to {flex:4;margin-right:1px;}
         }
         @keyframes r3c3{
-            from {flex:4;}
-            to {flex:8;}
+            from {flex:4;margin-left:1px;}
+            to {flex:8;margin-left:16px;}
         }
     </style>
 </head>
@@ -45,18 +45,17 @@
         <div class="row">
             <div style="
             background: rgb(5,191,206);
-            flex:9;
-            animation: r1c1 1s linear 0s infinite alternate;
+            animation: r1c1 1s ease 0s infinite alternate;
             " class="box"></div>
             <div style="
             background: rgb(0, 96, 255);
             flex:3;
-            animation: r1c2 1s linear 0s infinite alternate;
             " class="box"></div>
         </div>
         <div class="row" style="
         background: rgb(255,205,16);
         margin-right:8px;
+        width: 120px;
         animation: r2 1s linear 0s infinite alternate;
         ">
         </div>
@@ -64,16 +63,17 @@
             <div style="
             background: rgb(238, 23, 0);
             flex:8;
-            animation: r3c1 1s linear 0s infinite alternate;
+            animation: r3c1 0.25s ease 0s infinite alternate;
             " class="box"></div>
             <div style="
             background: rgb(149,191,21);
             flex:4;
+            margin-right:1px;
             " class="box"></div>
             <div style="
             background: rgb(32, 91, 103);
             flex:4;
-            animation: r3c3 1s linear 0s infinite alternate;
+            animation: r3c3 0.25s ease 0s infinite alternate;
             " class="box"></div>
         </div>
     </div>
