animated TH page

--- a/loading.html
+++ b/loading.html
@@ -63,7 +63,7 @@
             <div style="
             background: rgb(238, 23, 0);
             flex:8;
-            animation: r3c1 0.25s ease 0s infinite alternate;
+            animation: r3c1 0.25s linear 0s infinite alternate;
             " class="box"></div>
             <div style="
             background: rgb(149,191,21);
@@ -73,7 +73,7 @@
             <div style="
             background: rgb(32, 91, 103);
             flex:4;
-            animation: r3c3 0.25s ease 0s infinite alternate;
+            animation: r3c3 0.25s linear 0s infinite alternate;
             " class="box"></div>
         </div>
     </div>
