--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css">
     <link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.min.css" />
-    <link
+    <!-- <link
     type="text/css"
     rel="stylesheet"
     href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css"
-    />
+    /> -->
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.7.2/rellax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
@@ -61,14 +61,14 @@
                         <badge label="chapters" :status="chapters" color="success"></badge>
                     </div>
                     <div class="col-sm-9 embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item"
+                        <!-- <iframe class="embed-responsive-item"
                         width="860"
                         height="484" 
                         src="https://www.youtube.com/embed/6RdXLvr8R54" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                         allowfullscreen>
-                        </iframe>
+                        </iframe> -->
                     </div>
                 </div>
                 <div class="row">
