--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
                         <badge label="chapters" :status="chapters" color="success"></badge>
                     </div>
                     <div class="col-sm-9 embed-responsive embed-responsive-16by9">
-                        <!-- <iframe class="embed-responsive-item"
+                        <iframe class="embed-responsive-item"
                         width="860"
                         height="484" 
                         src="https://www.youtube.com/embed/6RdXLvr8R54" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                         allowfullscreen>
-                        </iframe> -->
+                        </iframe>
                     </div>
                 </div>
                 <div class="row">
