--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css"
     /> -->
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.7.2/rellax.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
-    <script src="https://unpkg.com/@babel/polyfill@latest/dist/polyfill.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/3.0.2/vue-router.min.js"></script>
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.7.2/rellax.min.js"></script>
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+    <script async src="https://unpkg.com/@babel/polyfill@latest/dist/polyfill.min.js"></script>
+    <script async src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/3.0.2/vue-router.min.js"></script>
 </head>
 <body>
     <div id="fullscreen" 
