defer youtube video load

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <iframe class="embed-responsive-item"
                         width="860"
                         height="484" 
-                        src="https://www.youtube.com/embed/6RdXLvr8R54" 
+                        data-src="https://www.youtube.com/embed/6RdXLvr8R54" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                         allowfullscreen>
