defer than async

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
     <script async src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.7.2/rellax.min.js"></script>
     <script async src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
-    <script async src="https://unpkg.com/@babel/polyfill@latest/dist/polyfill.min.js"></script>
-    <script async src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script async src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/3.0.2/vue-router.min.js"></script>
+    <script defer src="https://unpkg.com/@babel/polyfill@latest/dist/polyfill.min.js"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/3.0.2/vue-router.min.js"></script>
 </head>
 <body>
     <div id="fullscreen" 
@@ -78,7 +78,7 @@
             
         </div>
     </div>
-    <script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.js"></script>
-    <script src="main.js"></script>
+    <script defer src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.js"></script>
+    <script defer src="main.js"></script>
 </body>
 </html>
