dev mode vuejs setting

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script async src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.7.2/rellax.min.js"></script>
     <script async src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <script defer src="https://unpkg.com/@babel/polyfill@latest/dist/polyfill.min.js"></script>
-    <script defer src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/vue-router/3.0.2/vue-router.min.js"></script>
 </head>
 <body>
