main.html finish 2

--- a/main.html
+++ b/main.html
@@ -27,20 +27,28 @@
             <h2>Build Your Tinkerhub Chapter!</h2>
         </b-row>
         <para title="Register and Create Logo"
-        content="Lets get started by registering!"
         left="true"
         image="https://picsum.photos/400/400/?image=20"
-        ></para>
+        >
+        Lets get started by registering!<br>
+            <b-button-group>
+                <b-button variant='success'>Register</b-button>
+                <b-button variant="warning">Create Logo</b-button>
+            </b-button-group>
+        </para>
         <para title="Get the handbook"
-        content="we curated a handbook for you to get started with Tinkerhub community activities. Download it here!
-        suggestions about handbook are welcome.<button class='btn btn-info'>handbook</button>"
         image="https://picsum.photos/400/400/?image=20"
-        ></para>
+        >
+        we curated a handbook for you to get started with Tinkerhub community activities. Download it here!
+        suggestions about handbook are welcome.
+            <b-button to='/handbook' variant='info'>handbook</b-button>
+        </para>
         <para title="Lead"
-        content="Now go lead! Create an awesome community in your campus. We are eagerly waiting to hear your leadership 
-        stories. Happy Learning!"
         left="true"
         image="https://picsum.photos/400/400/?image=20"
-        ></para>
+        >
+        Now go lead! Create an awesome community in your campus. We are eagerly waiting to hear your leadership 
+        stories. Happy Learning!
+        </para>
     </b-container>
 </div> 
