handbook typed in

--- a/handbook/index.html
+++ b/handbook/index.html
@@ -1,3 +1,215 @@
 <div>
     <covertitle title="Handbook" image="coverBack.jpg"></covertitle>
+    <b-container>
+        <para
+        title="What are TinkerHub Chapters?"
+        >
+        Tinkerhub chapters are the products of Tinkerhub campus expansion project to build a
+        peer to peer technology learning culture in campuses.
+        </para>
+
+        <para
+        title="Why build TinkerHub Chapters?"
+        >
+        Fourth industrial revolution is coming and it is all about knowledge and skills. Our campuses
+        need a community ecosystem that focus on peer learning. Read the experience shared by peers from
+        our RIT chapter.
+        </para>
+
+        <para
+        title="Get started"
+        >
+        From the experience of our previous campus intiatives we created a recipe for you to start an awesome
+        TH chapter in you campus. We are looking forward to taste the additional ingredients you are going to
+        add for taking the initiative to further levels.
+
+        <b-container>
+                <para
+                title="Step 1"
+                >
+                Generate the logo! We created this cool logo generator for you to make your TH campus logo.
+                <br>
+                For standardisation we are using some design conventions. So you dont have to worry about 
+                design stuffs.
+                <br><br>
+                Your Tinkerhub logo will be like Tinkerhub-&lt;college name&gt; (eg: Tinkerhub-RIT)
+                <br><br>
+                Create and download logo and other design materials
+                </para>
+
+                <para
+                title="Step 2"
+                >
+                Tinkerhub is a people first community. The goal of Tinkerhub in campus is to help you, our fellow
+                campus community members to learn 21<sup>st</sup> century technology and grab the opportunites
+                provided by the same. We are not recommending any hierarchical structure for leading the campus
+                community.
+                <br><br>
+                Even though, for every community there will be a set of founders, leades who trigger the vision.
+                Second step is to find your team. Here are some guidelines for finding the team.
+                <ol type="1">
+                    <li>
+                        Find people with interest in putting effort to learn of technology, share knowledge
+                        and help others.
+                    </li>
+                    <li>
+                        Talk to them about tinkerhub, how building a chapter will make an impact, what you are 
+                        planning to do.
+                    </li>
+                    <li>
+                        Listen to their vision and ensure that this align with yours.
+                    </li>
+                    <li>
+                        People who are already a member of a lot of communities are not 
+                        encouraged to be in the lead team. Leads should be able to spend 
+                        reasonable time in conducting Tinkerhub chapter operations.
+                    </li>
+                    <li>
+                        Recognise and avoid people who join the community just for reputation 
+                        or filing their resume.
+                    </li>
+                </ol>
+                </para>
+
+                <para
+                title="Step 3"
+                >
+                A virtual space for the community members to gather is common for every communities. 
+                And it is a really helpful part for a community. Here you can share and obtain learning
+                resources/opportunities, have great discussions about new technology trends and more over 
+                you will have a set of great minds to help you to fix a bug or give an expert suggestion.
+                Create your Tinkerhub community virtual space using any of the existing chat platforms like
+                whatsapp, telegram, slack..etc. You can choose the platform based on a student survey or metrics 
+                like number of students you are expected to join..etc.
+
+                Use Tinkerhub logo and the name Tinkerhub- &lt;college name&gt; as the group name.
+
+                Here are some tips for a better community virtual space experience from our pros.
+                <ol>
+                    <li>
+                        Add members to the group after proper filtering i.e add someone only if you find he has 
+                        genuine interest in learning technology or building something.
+                    </li>
+                    <li>
+                        Strictly discourage personal chitchats and contents other than the ones mentioned above 
+                        (eg: political view contents, spams, techfest. promotions)
+                    </li>
+                    <li>
+                        Ensure privacy of group members.
+                    </li>
+                </ol>
+                </para>
+                <para
+                title="Step 4"
+                >
+                Showing off!
+                <br><br>
+                This is important. Because the community chapter is for building a learning culture in your campus. 
+                So it’s one of your goal to inform the campus about the community activities and thereby attract more 
+                innovators in you campus to the community. This can be effectively done via various social medias.
+                <br><br>
+                Here are some of the possibilities.
+                <ol>
+                    <li>
+                        Start a website with a forum, photos, videos about the work done by the community.
+                    </li>
+                    <li>
+                        Start Facebook, twitter, instagram handles and update about the activities done by the chapter.
+                    </li>
+                    <li>
+                        Posting stories of learning and achievements by students will help them achieve great 
+                        reputation and it will bring more leaders to your endeavor.
+                    </li>
+                </ol>
+                </para>
+        </b-container>
+        </para>
+
+        <para
+        title="Events and Meetups"
+        >
+        One of the key focus of Tinkerhub campus chapters, as mentioned many times in the handbook is to create a 
+        self learning and peer learning culture in campus. We want students to learn technology that is not 
+        available in the syllabus but needed by the industry. Tinkerhub promotes events that align with the above 
+        philosophy.
+        <br><br>
+        Another key focus is to ensure that activities are conducted frequently and impacts are made in an energetic 
+        manner. A problem many campuses facing is the issues in authority-student communication for conducting the 
+        events. Tinkerhub would like you to do lead the community in your campus with minimum faculty intervention. 
+        Though we always encourage passionate faculties to be part of the community.
+        <br><br>
+        Following are some of the events that can be conducted in a campus without much authority intervention. 
+        We are excited to know about more similar event ideas you are going to experiment in your campus.
+        <b-container>
+            <para title="Tech Share meetups">
+                This is a weekly gathering of the community members to meetup and talk about latest tech advancements. 
+                Each person can select a topic and should give a 15 minute talk during the gathering. This event is 
+                inspired from the Tinkerwoman meetup conducted by Tinkerhub-RIT chapter.
+                <br><br>
+                Venue : Canteen/Cafeteria<br>
+                Duration : 2-3 hours<br>
+                Needs : Snacks, coffee, interested people<br>
+            </para>
+            <para title="Online Coding Competitions">
+                Using various online coding competition platforms like HackerRank and HackerEarth you can conduct weekly 
+                coding competitions. Coding competitions are a good way to learn computer programming.
+                <br><br>
+                Venue : None<br>
+                Duration : 1 day +<br>
+                Needs : Questions, online coding competition platform, participants<br> 
+            </para>
+            <para title="Learn In">
+                Learn In is a learning program by tinkerhub. It is a mission to produce skilled tech Ninjas for 
+                training people who want to learn technology.  Campus chapters can check out the Tech Ninja hall 
+                of fame page and request for Learn In workshops in the campuses. Tinkerhub encourages you to give 
+                first preference to Ninja’s in the campus itself.
+                <br><br>
+                Venue : Classroom/ lab<br>
+                Duration : 3-4 hours<br>
+                Needs : Tech Ninja, participants, projector, mic, tea, snacks.<br>
+            </para>
+            <para title="Opportunity Hackday">
+                There are lots of opportunities like scholarships, fellowships and hackathons out there for 
+                students interested to learn and build tech. Opportunity hack day is a meetup for students 
+                in campuses to gather on a particular day at any place with internet availability and apply 
+                for the opportunities or register for the hackathons with the help of experienced students.
+                <br><br>
+                Tinkerhub will be providing a resource pool(a telegram channel) of upcoming such opportunities. 
+                One lead can keep an eye on this pool, choose the opportunities for the day (based on student 
+                interests) and coordinate the opportunity hackday
+                <br><br>
+                Venue : Computer Lab/ Classroom<br>
+                Duration : 2-3 hours<br>
+                Needs : Opportunity pool, student mentors, internet, aspirants.<br>
+            </para>
+            <para title="Campus projects">
+                Solving society's problems should be the ultimate goal of tech learning. 
+                Tinkerhub campus projects enable such an opportunity for the campus community members. 
+                Tinkerhub will provide a pool of problems and project ideas. Leads of the campus community 
+                can vouch skilled or interested students from the campus for working on those open source projects. 
+                Based on the contributions the contributors will be vouched for internship/job and freelancing 
+                opportunities.
+                <br><br>
+                Venue : None <br>
+                Duration : One week + <br>
+                Needs : Interested students, github knowledge, computers, internet. <br>
+            </para>
+            <para title="Fun Tech">
+                Building fun projects under 20 lines of code, for example a flappy bird game, tic tac toe game..etc. 
+                These projects can be open sourced and documented using videos or blogs.
+                <br><br>
+                Venue : None.<br>
+                Duration : 1 day +<br>
+                Needs : Ideas, computer<br>
+            </para>
+            <para title="Project Expos">
+                Small projects expo where students can come up and showcase their projects.
+                <br><br>
+                Venue : Classroom, hostel rooms<br>
+                Duration : 2 hours<br>
+                Needs : Tables, products, light music, Tea, Snacks.<br>
+            </para>
+        </b-container>
+        </para>
+    </b-container>
 </div>
