--- a/handbook/index.html
+++ b/handbook/index.html
@@ -24,9 +24,7 @@
         add for taking the initiative to further levels.
 
         <b-container>
-                <para
-                title="Step 1"
-                >
+                <accordion title="Step 1">
                 Generate the logo! We created this cool logo generator for you to make your TH campus logo.
                 <br>
                 For standardisation we are using some design conventions. So you dont have to worry about 
@@ -35,11 +33,9 @@
                 Your Tinkerhub logo will be like Tinkerhub-&lt;college name&gt; (eg: Tinkerhub-RIT)
                 <br><br>
                 Create and download logo and other design materials
-                </para>
+                </accordion>
 
-                <para
-                title="Step 2"
-                >
+                <accordion title="Step 2">
                 Tinkerhub is a people first community. The goal of Tinkerhub in campus is to help you, our fellow
                 campus community members to learn 21<sup>st</sup> century technology and grab the opportunites
                 provided by the same. We are not recommending any hierarchical structure for leading the campus
@@ -69,9 +65,9 @@
                         or filing their resume.
                     </li>
                 </ol>
-                </para>
+                </accordion>
 
-                <para
+                <accordion
                 title="Step 3"
                 >
                 A virtual space for the community members to gather is common for every communities. 
@@ -98,8 +94,8 @@
                         Ensure privacy of group members.
                     </li>
                 </ol>
-                </para>
-                <para
+                </accordion>
+                <accordion
                 title="Step 4"
                 >
                 Showing off!
@@ -121,7 +117,7 @@
                         reputation and it will bring more leaders to your endeavor.
                     </li>
                 </ol>
-                </para>
+                </accordion>
         </b-container>
         </para>
 
@@ -140,35 +136,44 @@
         <br><br>
         Following are some of the events that can be conducted in a campus without much authority intervention. 
         We are excited to know about more similar event ideas you are going to experiment in your campus.
-        <b-container>
-            <para title="Tech Share meetups">
+            <b-card style="margin-bottom:16px;" img-src="https://picsum.photos/900/250/?image=3" title="Tech Share meetups">
+                <b-card-text>
                 This is a weekly gathering of the community members to meetup and talk about latest tech advancements. 
                 Each person can select a topic and should give a 15 minute talk during the gathering. This event is 
                 inspired from the Tinkerwoman meetup conducted by Tinkerhub-RIT chapter.
-                <br><br>
+                </b-card-text>
+                <p slot="footer" style="color: black;">
                 Venue : Canteen/Cafeteria<br>
                 Duration : 2-3 hours<br>
                 Needs : Snacks, coffee, interested people<br>
-            </para>
-            <para title="Online Coding Competitions">
+                </p>
+            </b-card>
+            <b-card style="margin-bottom:16px;" img-src="https://picsum.photos/900/250/?image=3" title="Online Coding Competitions">
+                <b-card-text>
                 Using various online coding competition platforms like HackerRank and HackerEarth you can conduct weekly 
                 coding competitions. Coding competitions are a good way to learn computer programming.
-                <br><br>
+                </b-card-text>
+                <p slot='footer' style="color: black;">
                 Venue : None<br>
                 Duration : 1 day +<br>
-                Needs : Questions, online coding competition platform, participants<br> 
-            </para>
-            <para title="Learn In">
+                Needs : Questions, online coding competition platform, participants<br>
+                </p> 
+            </b-card>
+            <b-card style="margin-bottom:16px;" img-src="https://picsum.photos/900/250/?image=3" title="Learn In">
+                <b-card-text>
                 Learn In is a learning program by tinkerhub. It is a mission to produce skilled tech Ninjas for 
                 training people who want to learn technology.  Campus chapters can check out the Tech Ninja hall 
                 of fame page and request for Learn In workshops in the campuses. Tinkerhub encourages you to give 
                 first preference to Ninja’s in the campus itself.
-                <br><br>
+                </b-card-text>
+                <p slot='footer' style="color: black;">
                 Venue : Classroom/ lab<br>
                 Duration : 3-4 hours<br>
                 Needs : Tech Ninja, participants, projector, mic, tea, snacks.<br>
-            </para>
-            <para title="Opportunity Hackday">
+                </p>
+            </b-card>
+            <b-card style="margin-bottom:16px;" img-src="https://picsum.photos/900/250/?image=3" title="Opportunity Hackday">
+                <b-card-text>
                 There are lots of opportunities like scholarships, fellowships and hackathons out there for 
                 students interested to learn and build tech. Opportunity hack day is a meetup for students 
                 in campuses to gather on a particular day at any place with internet availability and apply 
@@ -177,39 +182,49 @@
                 Tinkerhub will be providing a resource pool(a telegram channel) of upcoming such opportunities. 
                 One lead can keep an eye on this pool, choose the opportunities for the day (based on student 
                 interests) and coordinate the opportunity hackday
-                <br><br>
+                </b-card-text>
+                <p slot='footer' style="color: black;">
                 Venue : Computer Lab/ Classroom<br>
                 Duration : 2-3 hours<br>
                 Needs : Opportunity pool, student mentors, internet, aspirants.<br>
-            </para>
-            <para title="Campus projects">
+                </p>
+            </b-card>
+            <b-card style="margin-bottom:16px;"  img-src="https://picsum.photos/900/250/?image=3" title="Campus projects">
+                <b-card-text>
                 Solving society's problems should be the ultimate goal of tech learning. 
                 Tinkerhub campus projects enable such an opportunity for the campus community members. 
                 Tinkerhub will provide a pool of problems and project ideas. Leads of the campus community 
                 can vouch skilled or interested students from the campus for working on those open source projects. 
                 Based on the contributions the contributors will be vouched for internship/job and freelancing 
                 opportunities.
-                <br><br>
+                </b-card-text>
+                <p slot='footer' style="color: black;">
                 Venue : None <br>
                 Duration : One week + <br>
                 Needs : Interested students, github knowledge, computers, internet. <br>
-            </para>
-            <para title="Fun Tech">
+                </p>
+            </b-card>
+            <b-card style="margin-bottom:16px;" img-src="https://picsum.photos/900/250/?image=3" title="Fun Tech">
+                <b-card-text>
                 Building fun projects under 20 lines of code, for example a flappy bird game, tic tac toe game..etc. 
                 These projects can be open sourced and documented using videos or blogs.
-                <br><br>
+                </b-card-text>
+                <p slot='footer' style="color: black;">
                 Venue : None.<br>
                 Duration : 1 day +<br>
                 Needs : Ideas, computer<br>
-            </para>
-            <para title="Project Expos">
+                </p>
+            </b-card>
+            <b-card style="margin-bottom:16px;" img-src="https://picsum.photos/900/250/?image=3" title="Project Expos">
+                <b-card-text>
                 Small projects expo where students can come up and showcase their projects.
-                <br><br>
+                </b-card-text>
+                <p slot='footer' style="color: black;">
                 Venue : Classroom, hostel rooms<br>
                 Duration : 2 hours<br>
                 Needs : Tables, products, light music, Tea, Snacks.<br>
-            </para>
-        </b-container>
+                </p>
+            </b-card>
         </para>
     </b-container>
 </div>
