--- a/handbook/index.html
+++ b/handbook/index.html
@@ -24,7 +24,7 @@
         add for taking the initiative to further levels.
 
         <b-container>
-                <accordion title="Step 1">
+                <accordion title="Step 1" id='a1'>
                 Generate the logo! We created this cool logo generator for you to make your TH campus logo.
                 <br>
                 For standardisation we are using some design conventions. So you dont have to worry about 
@@ -35,7 +35,7 @@
                 Create and download logo and other design materials
                 </accordion>
 
-                <accordion title="Step 2">
+                <accordion title="Step 2" id='a2'>
                 Tinkerhub is a people first community. The goal of Tinkerhub in campus is to help you, our fellow
                 campus community members to learn 21<sup>st</sup> century technology and grab the opportunites
                 provided by the same. We are not recommending any hierarchical structure for leading the campus
@@ -68,7 +68,7 @@
                 </accordion>
 
                 <accordion
-                title="Step 3"
+                title="Step 3" id='a3'
                 >
                 A virtual space for the community members to gather is common for every communities. 
                 And it is a really helpful part for a community. Here you can share and obtain learning
@@ -96,7 +96,7 @@
                 </ol>
                 </accordion>
                 <accordion
-                title="Step 4"
+                title="Step 4" id='a4'
                 >
                 Showing off!
                 <br><br>
