--- a/handbook/index.html
+++ b/handbook/index.html
@@ -23,7 +23,7 @@
         TH chapter in you campus. We are looking forward to taste the additional ingredients you are going to
         add for taking the initiative to further levels.
 
-        <b-container>
+        <b-container style="margin-top:16px;">
                 <accordion title="Step 1" id='a1'>
                 Generate the logo! We created this cool logo generator for you to make your TH campus logo.
                 <br>
