--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     rel="stylesheet"
     href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css"
     /> -->
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <script defer src="https://unpkg.com/@babel/polyfill@latest/dist/polyfill.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -51,10 +51,13 @@
                     </b-collapse>
                 </b-navbar>
             </div>
-        <router-view style="overflow: hidden;">
+        <router-view id="mainView" style="overflow: hidden;">
         </router-view>
     </div>
     <script defer src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.js"></script>
     <script defer src="main.js"></script>
+    <footer style="display: flex;align-items: center;justify-content: center;">
+        <span>Hosted on Github</span>
+    </footer>
 </body>
 </html>
